Deleted example button and fixed card image z-index

--- a/src/stories/Image/image.module.css
+++ b/src/stories/Image/image.module.css
@@ -1,5 +1,4 @@
 .image {
   border-radius: 10px;
   object-fit: cover;
-  z-index: 0;
 }
